syntax = "proto3";
package content;
import "content/action.enum.proto";
import "content/content.enum.proto";
import "user/user.model.proto";
import "cherry/protobuf/utils/patch/go.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option java_package = "xyz.hoper.protobuf.content";
option go_package = "github.com/liov/hoper/server/go/protobuf/content";


message Like{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 refId = 6 [(go.field) = {tags:'gorm:"size:20;not null;index:idx_like_type_id" validate:"required" comment:"相关id"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" comment:"用户id"'}];
  ContentType type = 2 [(go.field) = {tags:'gorm:"type:int2;not null;index:idx_like_type_id" validate:"required" comment:"相关类型"'}];
  ActionType action = 3 [(go.field) = {tags:'gorm:"type:int2;default:1" validate:"required" comment:"动作"'}];
  user.UserBaseInfo user = 4 [(go.field) = {tags:'gorm:"-" comment:"用户"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string deletedAt = 26 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}

// 举报
message Report{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 refId = 6 [(go.field) = {tags:'gorm:"size:20;not null;index:idx_report_type_id" validate:"required" comment:"相关id"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" comment:"用户id"'}];
  ContentType type = 12 [(go.field) = {tags:'gorm:"type:int2;not null;index:idx_report_type_id" validate:"required" comment:"相关类型"'}];
  user.UserBaseInfo user = 2 [(go.field) = {tags:'gorm:"-" comment:"用户"'}];
  DelReason delReason = 3[(go.field) = {tags:'gorm:"type:int2;default:0" comment:"举报原因"'}];
  string remark = 4[(go.field) = {tags:'gorm:"size:255;default:\'\'" comment:"备注"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
}

// 收藏
message Collection{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 refId = 6 [(go.field) = {tags:'json:"-" gorm:"size:20;not null;index:idx_collect_type_id" validate:"required" comment:"相关id"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" comment:"用户id"'}];
  ContentType type = 12 [(go.field) = {tags:'json:"-" gorm:"type:int2;not null;index:idx_collect_type_id" validate:"required" comment:"相关类型"'}];
  user.UserBaseInfo user = 2 [(go.field) = {tags:'gorm:"-" comment:"用户"'}];
  uint64 favId = 3 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" comment:"用户id"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string deletedAt = 26 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}

// 分享
message Share{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 refId = 6 [(go.field) = {tags:'json:"-" gorm:"size:20;not null;index:idx_share_type_id" validate:"required" comment:"相关id"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" comment:"用户id"'}];
  ContentType type = 12 [(go.field) = {tags:'json:"-" gorm:"type:int2;not null;index:idx_share_type_id" validate:"required" comment:"相关类型"'}];
  user.UserBaseInfo user = 2 [(go.field) = {tags:'gorm:"-" comment:"用户"'}];
  Platform platform = 3 [(go.field) = {tags:'gorm:"size:20;not null" validate:"required" comment:"用户id"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string deletedAt = 26 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
}

// 系统删除内容记录
message ContentDel{
  uint64 refId = 2 [(go.field) = {tags:'json:"-" gorm:"size:20;default:0;primaryKey;autoIncrement:false" comment:"相关id"'}];
  ContentType type = 1 [(go.field) = {tags:'json:"-" gorm:"type:int2;default:0;primaryKey;autoIncrement:false" comment:"类型"'}];
  DelReason delReason = 3[(go.field) = {tags:'gorm:"type:int2;default:0" comment:"删除原因"'}];
  string remark = 4[(go.field) = {tags:'gorm:"size:255;default:\'\'" comment:"备注"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
}
// 评论
message Comment{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  uint64 refId = 6 [(go.field) = {tags:'json:"-" gorm:"size:20;not null;index:idx_type_id" validate:"required" comment:"相关id"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" comment:"用户id"'}];
  ContentType type = 12 [(go.field) = {tags:'json:"-" gorm:"size:1;not null;index:idx_type_id" validate:"required" comment:"相关类型"'}];
  user.UserBaseInfo user = 2 [(go.field) = {tags:'gorm:"" comment:"用户"'}];
  string content = 3 [(go.field) = {tags:'gorm:"size:255;not null" comment:"内容"'}];
  string image = 13 [(go.field) = {tags:'gorm:"size:255;not null" comment:"图片"'}];
  uint64 replyId = 7 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"回复id"'}];
  uint64 rootId = 8 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"评论根id"'}];
  user.UserBaseInfo recvUser = 9 [(go.field) = {tags:'gorm:"-" comment:"接收人"'}];
  uint64 recvId = 10 [(go.field) = {tags:'gorm:"size:20;not null;index" validate:"required" comment:"接收人id"'}];
  ContentExt ext = 30[(go.field) = {tags:'gorm:"-" comment:"统计数据"'}];
  UserAction action = 26[(go.field) = {tags:'gorm:"-" comment:"用户动作"'}];
  repeated Comment subComments = 11 [(go.field) = {tags:'gorm:"-" comment:"子评论"'}];
  uint32 sequence = 4 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"同级别的分类可根据sequence的值来排序，置顶"'}];
  string createdAt = 25 [(go.field) = {tags:'gorm:"type:timestamptz(6);default:now();index"'}];
  string deletedAt = 27 [(go.field) = {tags:'gorm:"<-:false;type:timestamptz(6);index"'}];
  uint32 status = 28 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
}

message ContentExt{
  ContentType type = 2 [(go.field) = {tags:'json:"-" gorm:"type:int2;not null;index:idx_content_type_id" validate:"required" comment:"相关类型"'}];
  uint64 refId = 1 [(go.field) = {tags:'json:"-" gorm:"size:20;not null;index:idx_content_type_id" validate:"required" comment:"相关id"'}];
  uint64 likeCount = 3 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"点赞数"'}];
  uint64 browseCount = 4 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"浏览数"'}];
  uint64 unlikeCount = 5 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"不喜欢数"'}];
  uint64 reportCount = 6 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"举报数"'}];
  uint64 commentCount = 7 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"评论数"'}];
  uint64 collectCount = 8 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"收藏数"'}];
  uint64 shareCount = 9 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"分享数"'}];
}

message UserAction{
  uint64 likeId = 32 [(go.field) = {tags:'gorm:"-" comment:"喜欢id,为0代表用户没有点喜欢"'}];
  uint64 unlikeId = 29 [(go.field) = {tags:'gorm:"-" comment:"不喜欢id,为0代表用户没有点喜欢"'}];
  repeated uint64 collects = 28 [(go.field) = {tags:'gorm:"-" comment:"是否收藏"'}];
}
